[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1.17.0", features = ["full"] }
tokio-macros = "1.7.0"
tracing = "0.1.32"
tower = { version = "0.4.12", features = ["full"] }
bytes = "1.1.0"
tokio-util = { version = "0.7.0", features = ["codec"] }
futures-util = "0.3.21"
anyhow = "1.0.55"
