[package]
edition = "2021"
name = "agent"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 16 
debug = false 
debug-assertions = false 
incremental = false 
lto = false 
opt-level = 3 
overflow-checks = false 
panic = 'unwind' 
rpath = false 
split-debuginfo = '...' # Platform-specific.
[[bin]]
name = "ppaass-agent"
path = "src/main.rs"
[dependencies]
anyhow = "1.0.55"
bytecodec = "0.4.15"
bytes = "1.1.0"
chrono = "0.4.19"
common = {path = "../common"}
futures-util = {version = "0.3.21", features = ["sink"]}
httpcodec = "0.2.3"
lazy_static = "1.4.0"
serde = "1.0.136"
serde_derive = "1.0.136"
tokio = {version = "1.17.0", features = ["full"]}
tokio-macros = "1.7.0"
tokio-util = {version = "0.7.1", features = ["codec"]}
toml = "0.5.8"
tower = {version = "0.4.12", features = ["full"]}
tracing = "0.1.32"
tracing-appender = "0.2.1"
tracing-subscriber = "0.3.9"
url = "2.2.2"
