[package]
edition = "2021"
name = "agent"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 16 
debug = false 
debug-assertions = false 
incremental = false 
lto = false 
opt-level = 3 
overflow-checks = false 
panic = 'unwind' 
rpath = false 
split-debuginfo = '...' # Platform-specific.
[[bin]]
name = "ppaass-agent"
path = "src/main.rs"
[dependencies]
anyhow = "1.0.57"
bytecodec = "0.4.15"
bytes = "1.1.0"
chrono = "0.4.19"
common = {path = "../common"}
futures = "0.3.21"
httpcodec = "0.2.3"
lazy_static = "1.4.0"
serde = "1.0.137"
serde_derive = "1.0.137"
tokio = {version = "1.18.2", features = ["macros", "time", "net", "io-util", "rt-multi-thread"]}
tokio-util = {version = "0.7.2", features = ["codec"]}
toml = "0.5.8"
tower = {version = "0.4.12", features = ["full"]}
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
url = "2.2.2"
