[package]
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.1.0"
chrono = "0.4.19"
futures-util = {version = "0.3.21", features = ["sink"]}
lz4 = "1.23.3"
rand = "0.8.5"
rsa = "0.6.1"
rust-crypto = "0.2.36"
thiserror = "1.0.31"
tokio = {version = "1.18.2", features = ["time", "net"]}
tokio-util = {version = "0.7.2", features = ["codec"]}
tower = {version = "0.4.12", features = ["full"]}
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
uuid = {version = "1.0.0", features = ["v4"]}
