[package]
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1"
chrono = "0.4"
futures = "0.3"
lz4 = "1"
pin-project = "1.0"
pretty-hex = "0.3"
rand = "0.8"
rsa = "0.6"
rust-crypto = "0.2"
thiserror = "1"
tokio = {version = "1", features = ["time", "net"]}
tokio-util = {version = "0.7", features = ["codec"]}
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
uuid = {version = "1", features = ["v4"]}
