[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[[bin]]
name = "ppaass-proxy"
path = "src/main.rs"
[dependencies]
common = { path = "../common" }
tokio = { version = "1.17.0", features = ["full"] }
tokio-macros = "1.7.0"
tracing = "0.1.32"
tower = { version = "0.4.12", features = ["full"] }
bytes = "1.1.0"
tokio-util = { version = "0.7.0", features = ["codec"] }
futures-util = { version = "0.3.21", features = ["sink"] }
serde = "1.0.136"
serde_derive = "1.0.136"
toml = "0.5.8"
anyhow = "1.0.55"
lazy_static = "1.4.0"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2.1"
chrono="0.4.19"
rand = "0.8.5"
