[package]
edition = "2021"
name = "proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 16 
debug = false 
debug-assertions = false 
incremental = false 
lto = false 
opt-level = 3 
overflow-checks = false 
panic = 'unwind' 
rpath = false 
split-debuginfo = '...' # Platform-specific.

[[bin]]
name = "ppaass-proxy"
path = "src/main.rs"
[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
clap = {version = "3", features = ["derive"]}
common = {path = "../common"}
futures = "0.3"
hotwatch = "0.4"
pretty-hex = "0.3"
rand = "0.8"
serde = "1"
serde_derive = "1"
socket2 = "0.4"
tokio = {version = "1", features = ["macros", "time", "net", "io-util", "rt-multi-thread"]}
tokio-util = {version = "0.7", features = ["codec"]}
toml = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
